// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array should fail to parse arrays with invalid values 1`] = `
[
  {
    "actual": "2",
    "code": "invalid_number",
    "path": [
      1,
    ],
  },
]
`;

exports[`array should fail to parse non-arrays 1`] = `
[
  {
    "actual": 0,
    "code": "invalid_array",
    "path": [],
  },
]
`;

exports[`array the path property works within an object 1`] = `
[
  {
    "actual": "1",
    "code": "invalid_number",
    "path": [
      "a",
      0,
    ],
  },
]
`;
